xmx set no decimal